test/tests/stages/15_arrays_and_pointer_arithmetic/invalid_types/assign_incompatible_pointer_types.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[35]:
  int
  identifier(main)
  (
  void
  )
  {
  int
  identifier(four_element_array)
  [
  const int(4)
  ]
  =
  {
  const int(1)
  ,
  const int(2)
  ,
  const int(3)
  ,
  const int(4)
  }
  ;
  int
  (
  *
  identifier(arr)
  )
  [
  const int(3)
  ]
  =
  &
  identifier(four_element_array)
  ;
  }
